--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@vueuse/core": "^14.0.0",
     "ali-oss": "^6.23.0",
     "axios": "^1.13.1",
+    "crypto-js": "^4.2.0",
     "lodash-es": "^4.17.21",
     "nprogress": "^0.2.0",
     "pinia": "^3.0.3",
@@ -45,6 +46,7 @@
     "@commitlint/types": "^20.0.0",
     "@iconify-json/carbon": "^1.2.14",
     "@intlify/unplugin-vue-i18n": "^11.0.1",
+    "@types/crypto-js": "^4.2.2",
     "@types/lodash-es": "^4.17.12",
     "@types/node": "^24.9.2",
     "@types/nprogress": "^0.2.3",
